<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eye_Hospital</string>
    <string name="action_settings">Settings</string>
    <string name="welcm">Drishti Eye  Hospital</string>
    <string name="strt">Our Vision </string>
    <string name="strt1">I am second</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="b1">Start Here</string>
    <string name="strt2">Rated as one of India leading Eye Hospitals, Drishti Eye Centre offers most advanced Eye Care Treatment Technology in India today. We also combine the expertise of our team which includes specialist Eye Surgeons who are highly experienced in their specialties of Cataract, Retina, Glaucoma and Laser Eye Surgeries.</string>
    <string name="strt3">This Hospital was founded by late Dr. P.Siva Reddy,a man of no ordinary repute,a highly decorated  person and an awardee of PADMASHREE and PADMABHUSHAN who started the clinic with a single  consulation room and over a period of 30 years has grown to be a 20 bedded,state of the art eye care facility</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_knowaboutstaff">MainActivity</string>
    <string name="apmt">Book An Appointment</string>
    <string name="info">Enter Patient Information below</string>
    <string name="firstname">Enter you Full Name </string>
    <string name="lastname">Enter your Last Name</string>
    <string name="adrs">Enter your Street Address</string>
    <string name="city">Enter your City Name</string>
    <string name="state">Enter your State</string>
    <string name="country">Enter your Country</string>
    <string name="phone">Enter your Email ID</string>
    <string name="cnfrm">New Patient ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="day">Enter Day</string>
    <string name="month">Enter Month</string>
    <string name="year">Enter Year</string>
    <string name="time">Enter Time</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="cnfrmapt">We will confirm your appointment through phone number.</string>
    <string name="ar">Appointment Request</string>
    <string name="entrd">Enter Your Appointment Date</string>
    <string name="submit">Confirm Your Application</string>
    <string name="dcr">Enter your Reason for Appointment [Regular check Up or New Patient or Other.Please specify it ].</string>
    <string name="uide">If you are old Patient Enter yor Id otherwise leave it</string>
    <string name="con">Consultants</string>
    <string name="pod">Panel Of Doctor</string>
    <string name="mc">Dr. M C Luthra</string>
    <string name="acon">Associate Consultants</string>
    <string name="vcon">Visiting Consultants</string>
    <string name="feq">Facilities and Equipments</string>
    <string name="soft">Software</string>
    <string name="ln">Latest News</string>
    <string name="au">About Us</string>
    <string name="hello">hello</string>
    <string name="datee">Enter your Appointment Date</string>
    <string name="not">Note: Please appoint your schedule before 1week.</string>
    <string name="csend">Get And Appointment</string>
    <string name="sub">Submit</string>
    <string name="bodym">Enter your Fullname,Street Address,City,State,Country,Contact Number and Date,Purpose of Appointment and Time of appointment(Early Morning,Evning and Night).If you are a regular patient enter your reference id</string>
    <string name="fet">Enter your Full Name</string>

</resources>
